# crypto-momentum-trading

./: .gitignore  README.md  STRATEGY_SPEC.md  claude.md  config.yaml  crypto_momentum_backtester_spec.md  pyproject.toml
scripts/: optimize.py  run_backtest.py
src/: contracts.py
src/backtest/: costs.py  engine.py
src/data/: fetcher.py  universe.py
src/optimization/: objective.py  results.py  search_space.py
src/portfolio/: portfolio.py  position_sizer.py  risk.py
src/reporting/: metrics.py  plots.py  tearsheet.py
src/signals/: base.py  ema_crossover.py  factory.py  momentum_zscore.py
tests/: conftest.py
tests/integration/: test_data_pipeline.py  test_engine_ema.py  test_engine_zscore.py
tests/property/: test_invariants.py
tests/unit/: test_costs.py  test_ema_crossover.py  test_fetcher.py  test_metrics.py  test_momentum_zscore.py  test_optimization.py  test_plots.py  test_portfolio.py  test_position_sizer.py  test_risk.py  test_tearsheet.py  test_universe.py
